# hexagonal_architecture_E_commerce_backend

./: .env  Cargo.toml
migrations/: 20250427231419_table.sql  20250516034126_table.down.sql  20250516034126_table.up.sql  20250519150346_modification.down.sql  20250519150346_modification.up.sql
src/: config.rs  main.rs
src/adaptateurs/: mod.rs
src/adaptateurs/entrer/: auth.rs  mod.rs  produits.rs  users.rs  utilisateurs.rs
src/adaptateurs/sortie/: produits.rs  users.rs  utilisateurs.rs
src/domain/: error.rs  mod.rs  models.rs  user.rs
src/domain/model/: error.rs  implementation.rs  mod.rs  models.rs
src/domain/services/: utilisateurs.rs
src/ports/: mod.rs  users.rs
src/ports/entrer/: mod.rs  produit.rs  utilisateurs.rs
src/ports/sortie/: mod.rs  produit.rs  utilisateurs.rs
