[package]
name = "web_site_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# Serveur web et API
axum = "0.6.18"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "trace", "compression-gzip"] }
tokio = { version = "1.28.2", features = ["full"] }
hyper = "0.14.26"

# Templates
askama = "0.12.0"
askama_axum = "0.3.0"

# Sérialisation/Désérialisation
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# Base de données
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "offline"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }

# Authentification
jsonwebtoken = "8.3.0"
argon2 = "0.5.0"
rand = "0.8.5"

# UUID
uuid = { version = "1.3.3", features = ["v4", "serde"] }

# Validation
validator = { version = "0.16.0", features = ["derive"] }

# Gestion d'erreurs
thiserror = "1.0.40"
anyhow = "1.0.71"

# Logs
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Configuration
dotenv = "0.15.0"
config = "0.13.3"

# Email
lettre = "0.10.4"

# Client HTTP pour intégrations externes
reqwest = { version = "0.11.18", features = ["json"] }

# Utilitaires
chrono = { version = "0.4.24", features = ["serde"] }
async-trait = "0.1.68"
futures = "0.3.28"

mockall = "0.11.4"