[package]
name = "web_site_rust"
version = "0.1.0"
edition = "2024"

[dependencies]

tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "trace", "compression-gzip"] }
tokio = { version = "1.28.2", features = ["full"] }
hyper = "0.14.26"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "offline"] }
jsonwebtoken = "8.3.0"
rand = "0.8.5"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
validator = { version = "0.16.0", features = ["derive"] }
thiserror = "1.0.40"
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
dotenv = "0.15.0"
config = "0.13.3"
lettre = "0.10.4"
reqwest = { version = "0.11.18", features = ["json"] }
chrono = { version = "0.4.24", features = ["serde"] }
async-trait = "0.1.68"
futures = "0.3.28"
mockall = "0.11.4"
bcrypt = "0.17.0"
axum = "0.8.4"
actix-web = "4.11.0"
futures-util = "0.3.31"
log = "0.4.27"
